--- a/ratwater_grpc/README.adoc
+++ b/ratwater_grpc/README.adoc
@@ -8,13 +8,19 @@
 == Procedure
 
 -----
+$ go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 $ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-$ protoc \
-    --proto_path=ratwater_grpc \
-    --go_opt paths=source_relative \
-    --go_out=ratwater_grpc/proto_out \
-    --go-grpc_out=ratwater_grpc/proto_out \
-    --go-grpc_opt paths=source_relative \
-    ratwater_grpc/ratwater.proto
+
+$ ( cd ratwater_grpc; \
+   protoc \
+    --go_out=proto \
+    --go_opt=paths=source_relative \
+    --go-grpc_out=proto \
+    --go-grpc_opt=paths=source_relative \
+    proto/ratwater.proto )
+
+$ ( cd ratwater_grpc; go mod edit -replace ratwater.xyz/grpc/proto/ratwater=./proto )
+$ ( cd ratwater_grpc; go mod tidy )
+$ ( cd ratwater_grpc; go run ratwater_server.go )
 -----
 
